--- a/register.html
+++ b/register.html
@@ -32,7 +32,7 @@
     </div>
 
     <!-- Main container for login form -->
-    <div class="container d-flex justify-content-center align-items-center">
+    <div class="container d-flex justify-content-center align-items-center mb-5">
         <div class="bg-white p-4 shadow" style="width: 100%; max-width: 800px; border-radius: 20px;">
             <!-- Title -->
             <h1 class="font-weight-bold text-center" style="color: black; font-size: 2rem;">Daftar</h1>
