--- a/register.html
+++ b/register.html
@@ -100,7 +100,7 @@
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/3659f450a4.js" crossorigin="anonymous"></script>
     <!-- My JS -->
-    <script src="js/myJS/login.js"></script>
+    <script src="js/myJS/register.js"></script>
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
