--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     </div>
     <div class="container-md">
       <div class="row">
-        <div class="col-md-4 d-flex justify-content-center mb-4">
+        <div class="col col-md-4 d-flex justify-content-center mb-4">
           <div class="card text-center py-4" style="width: 20rem;">
             <img src="img/asset/card1.png" class="card-img-top mx-auto" alt="poli umum"
               style="width: 150px; height: auto; margin-top: 10px;">
@@ -132,7 +132,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4 d-flex justify-content-center mb-4">
+        <div class="col col-md-4 d-flex justify-content-center mb-4">
           <div class="card text-center py-4" style="width: 20rem;">
             <img src="img/asset/card3.png" class="card-img-top mx-auto" alt="poli gigi"
               style="width: 150px; height: auto; margin-top: 10px;">
@@ -143,7 +143,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4 d-flex justify-content-center mb-4">
+        <div class="col col-md-4 d-flex justify-content-center mb-4">
           <div class="card text-center py-4" style="width: 20rem;">
             <img src="img/asset/card2.png" class="card-img-top mx-auto" alt="poli anak"
               style="width: 150px; height: auto; margin-top: 10px;">
