--- a/login.html
+++ b/login.html
@@ -52,7 +52,7 @@
                                     <span class="input-group-text"><i class="fa-regular fa-user"></i></span>
                                 </div>
                                 <input type="text" class="form-control" id="username" placeholder="Enter your username"
-                                    name="username">
+                                    name="username" required>
                             </div>
                         </div>
 
@@ -65,7 +65,7 @@
                                     <span class="input-group-text"><i class="fa-solid fa-key"></i></span>
                                 </div>
                                 <input type="password" class="form-control" id="password" placeholder="********"
-                                    name="password">
+                                    name="password" required>
                             </div>
                         </div>
 
