--- a/register.html
+++ b/register.html
@@ -52,7 +52,7 @@
                                     <span class="input-group-text"><i class="fa-regular fa-user"></i></span>
                                 </div>
                                 <input type="text" class="form-control" id="username" placeholder="Enter your username"
-                                    name="username">
+                                    name="username" required>
                             </div>
                         </div>
 
@@ -64,7 +64,7 @@
                                     <span class="input-group-text"><i class="fa-regular fa-envelope"></i></span>
                                 </div>
                                 <input type="text" class="form-control" id="email" placeholder="example@gmail.com"
-                                    name="email">
+                                    name="email" required>
                             </div>
                         </div>
 
@@ -77,7 +77,7 @@
                                     <span class="input-group-text"><i class="fa-solid fa-key"></i></span>
                                 </div>
                                 <input type="password" class="form-control" id="password" placeholder="********"
-                                    name="password">
+                                    name="password" required>
                             </div>
                         </div>
 
