--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   <!-- Section 1 -->
   <div class="csc1 container-md mt-5">
     <div class="row align-items-center mb-5">
-      <div class="col-md-6">
+      <div class="col-md-8">
         <h1 class="mainTitle font-weight-bold " style="font-size: 35px; color: black;">Selamat Datang di <br> PuskeSmart
         </h1>
         <h2 class="subTitle " style="font-size: 20px; font-weight: 400; color: black">
@@ -78,8 +78,9 @@
           Cari Tahu Lebih Lanjut
         </button>
       </div>
-      <div class="col-md-6 text-right mt-4 mt-md-0">
-        <img src="img/asset/ilustrasi 1.png" alt="Ilustrasi" class="ilust1 img-fluid" style="max-width: 250px;">
+      <div class="col-6 col-md-4 text-right mt-4 mt-md-0" style="width: 300px;">
+        <img src="img/asset/ilustrasi 1.png" alt="Ilustrasi" class="ilust1 img-fluid" style="max-width: 250px;"
+          id="ilust1">
       </div>
     </div>
   </div>
@@ -94,20 +95,22 @@
             style="max-width: 250px;">
         </div>
         <div class="col-md-6">
-          <h1 class="font-weight-bold text-center text-md-left mb-2" style="color: black">Tentang Kami</h1>
-          <p class="mt-4" style="color: black; font-size: 20px; font-weight: 400;">
-            Puskesmas Kebun Handil berkomitmen untuk menyediakan layanan kesehatan berkualitas bagi masyarakat.
-            Dengan tenaga medis yang berpengalaman dan fasilitas yang lengkap, kami siap melayani anda dan keluarga
-            dengan sepenuh hati.
-          </p>
-          <ul class="" style="color: black; font-size: 20px; font-weight: 400;">
-            <li class="mb-2">Layanan Terpercaya</li>
-            <li class="mb-2">Dokter dan Tenaga Medis Berpengalaman</li>
-            <li class="mb-2">Fasilitas Lengkap dan Modern</li>
-          </ul>
-          <button class="btn mt-3 rounded-pill p-3 text-white" style="font-weight: 600; background-color: #1AA365;">
-            Baca Selengkapnya
-          </button>
+          <div class="ml-md-5">
+            <h1 class="font-weight-bold text-center text-md-left mb-2" style="color: black">Tentang Kami</h1>
+            <p class="mt-4" style="color: black; font-size: 20px; font-weight: 400;">
+              Puskesmas Kebun Handil berkomitmen untuk menyediakan layanan kesehatan berkualitas bagi masyarakat.
+              Dengan tenaga medis yang berpengalaman dan fasilitas yang lengkap, kami siap melayani anda dan keluarga
+              dengan sepenuh hati.
+            </p>
+            <ul class="" style="color: black; font-size: 20px; font-weight: 400;">
+              <li class="mb-2">Layanan Terpercaya</li>
+              <li class="mb-2">Dokter dan Tenaga Medis Berpengalaman</li>
+              <li class="mb-2">Fasilitas Lengkap dan Modern</li>
+            </ul>
+            <button class="btn mt-3 rounded-pill p-3 text-white" style="font-weight: 600; background-color: #1AA365;">
+              Baca Selengkapnya
+            </button>
+          </div>
         </div>
       </div>
     </div>
@@ -159,8 +162,103 @@
   </div>
   <!-- End Section 3 -->
 
+  <!-- Section 4 -->
+  <section class="testimonials py-5" style="background-color: #F5F5F5;" id="testimonials">
+    <div class="container-lg py-4">
+      <div class="row justify-content-center">
+        <div class="col-lg-8">
+          <div class="section-title text-center">
+            <h2 class="font-weight-bold mb-5" style="color: black;">Testimoni</h2>
+          </div>
+        </div>
+      </div>
 
+      <div class="row justify-content-center">
+        <div class="col-lg-8 col-xl-7">
+          <div id="carousel1" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carousel1" data-slide-to="0" class="active bg-success"></li>
+              <li class="bg-success" data-target="#carousel1" data-slide-to="1"></li>
+              <li class="bg-success" data-target="#carousel1" data-slide-to="2"></li>
+            </ol>
 
+            <div class="carousel-inner p-1">
+              <!-- testi item start 1 -->
+              <div class="testi-item carousel-item active shadow-sm rounded p-5 mb-5"
+                style="background-color: #C6DCFA;">
+                <div class="testi-author-info d-flex align-items-center">
+                  <img src="img/asset/testimonial/1.jpg" class="img-thumbnail rounded-circle" alt="author image"
+                    style="width: auto; height: 100px;">
+                  <div class="author ml-3">
+                    <h3 class="mb-1" style="color: black; font-weight: 600;">Raj Himchal</h3>
+                    <p class="mt-3" style="color: black;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
+                      do eiusmod
+                      tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <div class="rating">
+                      <i class="fas fa-star text-warning"></i>
+                      <i class="fas fa-star text-warning"></i>
+                      <i class="fas fa-star text-warning"></i>
+                      <i class="fas fa-star text-warning"></i>
+                      <i class="fas fa-star text-warning"></i>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- Testi Item end-->
+
+              <!-- testi item start 2-->
+              <div class="testi-item carousel-item shadow-sm rounded p-5 mb-5"
+                style="background-color: #C6DCFA;">
+                <div class="testi-author-info d-flex align-items-center">
+                  <img src="img/asset/testimonial/2.jpg" class="img-thumbnail rounded-circle" alt="author image"
+                    style="width: auto; height: 100px;">
+                  <div class="author ml-3">
+                    <h3 class="mb-1" style="color: black; font-weight: 600;">Raj Himchal</h3>
+                    <p class="mt-3" style="color: black;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
+                      do eiusmod
+                      tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <div class="rating text-warning">
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- Testi Item end-->
+
+              <!-- testi item start 3-->
+              <div class="testi-item carousel-item shadow-sm rounded p-5 mb-5"
+                style="background-color: #C6DCFA;">
+                <div class="testi-author-info d-flex align-items-center">
+                  <img src="img/asset/testimonial/3.jpg" class="img-thumbnail rounded-circle" alt="author image"
+                    style="width: auto; height: 100px;">
+                  <div class="author ml-3">
+                    <h3 class="mb-1" style="color: black; font-weight: 600;">Raj Himchal</h3>
+
+                    <p class="mt-3" style="color: black;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                      tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <div class="rating text-warning">
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                      <i class="fas fa-star"></i>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- Testi Item end-->
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </section>
+  <!-- End Section 4 -->
 
   <!-- My JS -->
   <script src="js/myJS/index.js"></script>
