--- a/index.html
+++ b/index.html
@@ -191,63 +191,67 @@
                     style="width: auto; height: 100px;">
                   <div class="author ml-3">
                     <h3 class="mb-1" style="color: black; font-weight: 600;">Raj Himchal</h3>
-                    <p class="mt-3" style="color: black;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
-                      do eiusmod
-                      tempor incididunt ut labore et dolore magna aliqua.</p>
-                    <div class="rating">
-                      <i class="fas fa-star text-warning"></i>
-                      <i class="fas fa-star text-warning"></i>
-                      <i class="fas fa-star text-warning"></i>
-                      <i class="fas fa-star text-warning"></i>
-                      <i class="fas fa-star text-warning"></i>
-                    </div>
+                    <p class="text-muted m-0">06 November 2024</p>
                   </div>
+                </div>
+
+                <p class="mt-3" style="color: black;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
+                  do eiusmod
+                  tempor incididunt ut labore et dolore magna aliqua.</p>
+                <div class="rating">
+                  <i class="fas fa-star text-warning"></i>
+                  <i class="fas fa-star text-warning"></i>
+                  <i class="fas fa-star text-warning"></i>
+                  <i class="fas fa-star text-warning"></i>
+                  <i class="fas fa-star text-warning"></i>
                 </div>
               </div>
               <!-- Testi Item end-->
 
               <!-- testi item start 2-->
-              <div class="testi-item carousel-item shadow-sm rounded p-5 mb-5"
-                style="background-color: #C6DCFA;">
+              <div class="testi-item carousel-item shadow-sm rounded p-5 mb-5" style="background-color: #C6DCFA;">
                 <div class="testi-author-info d-flex align-items-center">
                   <img src="img/asset/testimonial/2.jpg" class="img-thumbnail rounded-circle" alt="author image"
                     style="width: auto; height: 100px;">
                   <div class="author ml-3">
                     <h3 class="mb-1" style="color: black; font-weight: 600;">Raj Himchal</h3>
-                    <p class="mt-3" style="color: black;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
-                      do eiusmod
-                      tempor incididunt ut labore et dolore magna aliqua.</p>
-                    <div class="rating text-warning">
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                    </div>
+                    <p class="text-muted m-0">06 November 2024</p>
                   </div>
+                </div>
+
+                <p class="mt-3" style="color: black;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
+                  do eiusmod
+                  tempor incididunt ut labore et dolore magna aliqua.</p>
+                <div class="rating text-warning">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
                 </div>
               </div>
               <!-- Testi Item end-->
 
               <!-- testi item start 3-->
-              <div class="testi-item carousel-item shadow-sm rounded p-5 mb-5"
-                style="background-color: #C6DCFA;">
+              <div class="testi-item carousel-item shadow-sm rounded p-5 mb-5" style="background-color: #C6DCFA;">
                 <div class="testi-author-info d-flex align-items-center">
                   <img src="img/asset/testimonial/3.jpg" class="img-thumbnail rounded-circle" alt="author image"
                     style="width: auto; height: 100px;">
                   <div class="author ml-3">
                     <h3 class="mb-1" style="color: black; font-weight: 600;">Raj Himchal</h3>
-
-                    <p class="mt-3" style="color: black;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                      tempor incididunt ut labore et dolore magna aliqua.</p>
-                    <div class="rating text-warning">
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                      <i class="fas fa-star"></i>
-                    </div>
+                    <p class="text-muted m-0">06 November 2024</p>
                   </div>
+                </div>
+
+                <p class="mt-3" style="color: black;">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
+                  do eiusmod
+                  tempor incididunt ut labore et dolore magna aliqua.</p>
+                <div class="rating text-warning">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
                 </div>
               </div>
               <!-- Testi Item end-->
@@ -259,6 +263,80 @@
     </div>
   </section>
   <!-- End Section 4 -->
+
+  <!-- Section 5 -->
+  <footer class="footer pt-10 pb-5 mt-auto footer-light" style="background-color: #68A3F3;">
+    <div class="container-lg">
+      <div class="row gx-5 py-5">
+        <div class="col-lg-6">
+          <div class="footer-brand"><img src="img/asset/logoVer.png" alt="" style="width: auto; height: 40px;"></div>
+          <!-- Almat -->
+          <div class="d-flex align-items-center">
+            <i class="fa-solid fa-location-dot" style="font-size: 15px; color: white;"></i>
+            <p class="ml-3 my-2" style="font-size: 10px; color: white; margin-left: 10px;">
+              Jl. Yunus Sanis No.9, Handil Jaya, Kec. Jelutung, Kota Jambi, Jambi, 36125
+            </p>
+          </div>
+          <!-- no telp -->
+          <div class="d-flex align-items-center">
+            <i class="fa-solid fa-phone-volume" style="font-size: 15px; color: white;"></i>
+            <p class="ml-3 my-2" style="font-size: 10px; color: white; margin-left: 10px;">
+              (021) 123-4567
+            </p>
+          </div>
+          <!-- Email -->
+          <div class="d-flex align-items-center">
+            <i class="fa-solid fa-envelope" style="font-size: 15px; color: white;"></i>
+            <p class="ml-3 my-2" style="font-size: 10px; color: white; margin-left: 10px;">
+              info@puskesmaskebunhandil.co.id
+            </p>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <div class="row gx-2">
+            <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
+              <div class="text-uppercase-expanded text-xs mb-4">Technical</div>
+              <ul class="list-unstyled mb-0">
+                <li class="mb-2"><a href="#!">Documentation</a></li>
+                <li class="mb-2"><a href="#!">Changelog</a></li>
+                <li class="mb-2"><a href="#!">Theme Customizer</a></li>
+                <li><a href="#!">UI Kit</a></li>
+              </ul>
+            </div>
+            <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
+              <div class="text-uppercase-expanded text-xs mb-4">Includes</div>
+              <ul class="list-unstyled mb-0">
+                <li class="mb-2"><a href="#!">Utilities</a></li>
+                <li class="mb-2"><a href="#!">Components</a></li>
+                <li class="mb-2"><a href="#!">Layouts</a></li>
+                <li class="mb-2"><a href="#!">Code Samples</a></li>
+                <li class="mb-2"><a href="#!">Products</a></li>
+                <li class="mb-2"><a href="#!">Affiliates</a></li>
+                <li><a href="#!">Updates</a></li>
+              </ul>
+            </div>
+            <div class="col-lg-3 col-md-6">
+              <div class="text-uppercase-expanded text-xs mb-4">Legal</div>
+              <ul class="list-unstyled mb-0">
+                <li class="mb-2"><a href="#!">Privacy Policy</a></li>
+                <li class="mb-2"><a href="#!">Terms and Conditions</a></li>
+                <li><a href="#!">License</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      <hr class="my-5">
+      <div class="row gx-5 align-items-center">
+        <div class="col-md-6 small">Copyright © Your Website 2023</div>
+        <div class="col-md-6 text-md-end small">
+          <a href="#!">Privacy Policy</a> · <a href="#!">Terms &amp; Conditions</a>
+        </div>
+      </div>
+    </div>
+  </footer>
+
+  <!-- End Section 5 -->
 
   <!-- My JS -->
   <script src="js/myJS/index.js"></script>
