--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
 
 </head>
 
-<body id="" style="font-family: 'Poppins', serif;">
+<body id="" style="font-family: 'Poppins', serif; padding-top: 100px">
 
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-light shadow" style="background-color: #68A3F3;">
+  <nav class="navbar navbar-expand-lg navbar-light shadow fixed-top" style="background-color: #68A3F3;">
     <div class="container-md p-3">
       <!-- Logo -->
-      <a href="#">
-        <img src="img/asset/logo.png" alt="Logo" class="puskeSmart">
-      </a>
+      <div>
+        <img src="img/asset/logo.png" alt="Logo" class="" style="width: auto; height: 40px;">
+      </div>
 
       <!-- Toggler for mobile view -->
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
@@ -72,7 +72,7 @@
         <h1 class="mainTitle font-weight-bold " style="font-size: 35px; color: black;">Selamat Datang di <br> PuskeSmart
         </h1>
         <h2 class="subTitle " style="font-size: 20px; font-weight: 400; color: black">
-          Temukan informasi layanan, jadwal dokter, dan kemudahan pendaftaran berobat dalam satu genggaman.
+          Temukan informasi layanan, jadwal dokter, dan kemudahan pendaftaran berobat dalamsatu genggaman.
         </h2>
         <button class="btn mt-3 rounded-pill p-3 text-white" style="font-weight: 600; background-color: #1AA365;">
           Cari Tahu Lebih Lanjut
@@ -269,68 +269,66 @@
     <div class="container-lg">
       <div class="row gx-5 py-5">
         <div class="col-lg-6">
-          <div class="footer-brand"><img src="img/asset/logoVer.png" alt="" style="width: auto; height: 40px;"></div>
+          <div class="footer-brand mb-2"><img src="img/asset/logoVer.png" alt="" style="width: auto; height: 40px;"></div>
           <!-- Almat -->
           <div class="d-flex align-items-center">
             <i class="fa-solid fa-location-dot" style="font-size: 15px; color: white;"></i>
-            <p class="ml-3 my-2" style="font-size: 10px; color: white; margin-left: 10px;">
-              Jl. Yunus Sanis No.9, Handil Jaya, Kec. Jelutung, Kota Jambi, Jambi, 36125
+            <p class="ml-3 my-2" style="font-size: 12px; color: white; margin-left: 10px;">
+              Jl. Yunus Sanis No.9, Handil Jaya, <br>Kec. Jelutung, Kota Jambi, Jambi, 36125
             </p>
           </div>
           <!-- no telp -->
           <div class="d-flex align-items-center">
             <i class="fa-solid fa-phone-volume" style="font-size: 15px; color: white;"></i>
-            <p class="ml-3 my-2" style="font-size: 10px; color: white; margin-left: 10px;">
+            <p class="ml-3 my-2" style="font-size: 12px; color: white; margin-left: 10px;">
               (021) 123-4567
             </p>
           </div>
           <!-- Email -->
           <div class="d-flex align-items-center">
             <i class="fa-solid fa-envelope" style="font-size: 15px; color: white;"></i>
-            <p class="ml-3 my-2" style="font-size: 10px; color: white; margin-left: 10px;">
+            <p class="ml-3 my-2" style="font-size: 12px; color: white; margin-left: 10px;">
               info@puskesmaskebunhandil.co.id
             </p>
           </div>
         </div>
         <div class="col-lg-6">
           <div class="row gx-2">
-            <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-              <div class="text-uppercase-expanded text-xs mb-4">Technical</div>
-              <ul class="list-unstyled mb-0">
-                <li class="mb-2"><a href="#!">Documentation</a></li>
-                <li class="mb-2"><a href="#!">Changelog</a></li>
-                <li class="mb-2"><a href="#!">Theme Customizer</a></li>
-                <li><a href="#!">UI Kit</a></li>
+            <div class="col-md-4 mb-5 mb-lg-0">
+              <div class="text-uppercase-expanded text-lg mb-4" style="color: white; font-weight: bold;">Layanan</div>
+              <ul class="list-unstyled text-light" style="font-weight: 600;">
+                <li class="" style="margin-bottom: -10px;"><p>Poli Umum</li>
+                <li class="" style="margin-bottom: -10px;"><p>Poli Anak</li>
+                <li class="" style="margin-bottom: -10px;"><p>Poli Gigi</li>
+                <li class="" style="margin-bottom: -10px;"><p>Poli Bidan</li>
+                <li class="" style="margin-bottom: -10px;"><p>Laboratorium</li>
+                
               </ul>
             </div>
-            <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
-              <div class="text-uppercase-expanded text-xs mb-4">Includes</div>
-              <ul class="list-unstyled mb-0">
-                <li class="mb-2"><a href="#!">Utilities</a></li>
-                <li class="mb-2"><a href="#!">Components</a></li>
-                <li class="mb-2"><a href="#!">Layouts</a></li>
-                <li class="mb-2"><a href="#!">Code Samples</a></li>
-                <li class="mb-2"><a href="#!">Products</a></li>
-                <li class="mb-2"><a href="#!">Affiliates</a></li>
-                <li><a href="#!">Updates</a></li>
+            <div class="col-md-4 mb-5 mb-md-0">
+              <div class="text-uppercase-expanded text-lg mb-4" style="color: white; font-weight: bold;">Dukungan</div>
+              <ul class="list-unstyled text-light" style="font-weight: 600;">
+                <li class="" style="margin-bottom: -10px;"><p>Pusat Bantuan</li>
+                <li class="" style="margin-bottom: -10px;"><p>FAQ</li>
+                <li class="" style="margin-bottom: -10px;"><p>Kontak Kami</li>
               </ul>
             </div>
-            <div class="col-lg-3 col-md-6">
-              <div class="text-uppercase-expanded text-xs mb-4">Legal</div>
-              <ul class="list-unstyled mb-0">
-                <li class="mb-2"><a href="#!">Privacy Policy</a></li>
-                <li class="mb-2"><a href="#!">Terms and Conditions</a></li>
-                <li><a href="#!">License</a></li>
+            <div class="col-md-4">
+              <div class="text-uppercase-expanded text-lg mb-4" style="color: white; font-weight: bold;">Tentang Kami</div>
+              <ul class="list-unstyled text-light" style="font-weight: 600;">
+                <li class="" style="margin-bottom: -10px;"><p>Visi Misi</li>
+                <li class="" style="margin-bottom: -10px;"><p>Tim Kami</li>
+                <li class="" style="margin-bottom: -10px;"><p>Bantuan & Artikel</li>
               </ul>
             </div>
           </div>
         </div>
       </div>
-      <hr class="my-5">
+      <hr class="my-5" style="background-color: white;">
       <div class="row gx-5 align-items-center">
-        <div class="col-md-6 small">Copyright © Your Website 2023</div>
-        <div class="col-md-6 text-md-end small">
-          <a href="#!">Privacy Policy</a> · <a href="#!">Terms &amp; Conditions</a>
+        <div class="col-md-6 small" style="color: white;">Copyright © PuskeSmart, 2024 - Hak Cipta Dilindungi.</div>
+        <div class="col-md-6 text-right small" >
+          <a href="#!" style="color: white; text-decoration: none;">Privacy Policy</a> · <a href="#!" style="color: white; text-decoration: none;">Terms &amp; Conditions</a>
         </div>
       </div>
     </div>
