--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
         <h2 class="subTitle " style="font-size: 20px; font-weight: 400; color: black">
           Temukan informasi layanan, jadwal dokter, dan kemudahan pendaftaran berobat dalamsatu genggaman.
         </h2>
-        <button class="btn mt-3 rounded-pill p-3 text-white" style="font-weight: 600; background-color: #1AA365;">
+        <button class="btn mt-3 rounded-pill p-3 text-white" style="font-weight: 600; background-color: #1AA365;"
+          data-toggle="modal" data-target="#modalSatu">
           Cari Tahu Lebih Lanjut
         </button>
       </div>
-      <div class="col-6 col-md-4 text-right mt-4 mt-md-0" style="width: 300px;">
-        <img src="img/asset/ilustrasi 1.png" alt="Ilustrasi" class="ilust1 img-fluid" style="max-width: 250px;"
-          id="ilust1">
+      <div class="col-md-4 d-none d-md-block img-fluid text-right mt-4 mt-md-0" style="width: 300px;">
+        <img src="img/asset/ilustrasi 1.png" alt="Ilustrasi" class="" style="max-width: 250px;" id="ilust1">
       </div>
     </div>
   </div>
@@ -107,7 +107,7 @@
               <li class="mb-2">Dokter dan Tenaga Medis Berpengalaman</li>
               <li class="mb-2">Fasilitas Lengkap dan Modern</li>
             </ul>
-            <button class="btn mt-3 rounded-pill p-3 text-white" style="font-weight: 600; background-color: #1AA365;">
+            <button class="btn mt-3 rounded-pill p-3 text-white" style="font-weight: 600; background-color: #1AA365;" data-toggle="modal" data-target="#modalDua">
               Baca Selengkapnya
             </button>
           </div>
@@ -190,7 +190,7 @@
                   <img src="img/asset/testimonial/1.jpg" class="img-thumbnail rounded-circle" alt="author image"
                     style="width: auto; height: 100px;">
                   <div class="author ml-3">
-                    <h3 class="mb-1" style="color: black; font-weight: 600;">Raj Himchal</h3>
+                    <h3 class="mb-1" style="color: black; font-weight: 600; font-size: 20px;">Raj Himchal</h3>
                     <p class="text-muted m-0">06 November 2024</p>
                   </div>
                 </div>
@@ -214,7 +214,7 @@
                   <img src="img/asset/testimonial/2.jpg" class="img-thumbnail rounded-circle" alt="author image"
                     style="width: auto; height: 100px;">
                   <div class="author ml-3">
-                    <h3 class="mb-1" style="color: black; font-weight: 600;">Raj Himchal</h3>
+                    <h3 class="mb-1" style="color: black; font-weight: 600; font-size: 20px;">Raj Himchal</h3>
                     <p class="text-muted m-0">06 November 2024</p>
                   </div>
                 </div>
@@ -238,7 +238,7 @@
                   <img src="img/asset/testimonial/3.jpg" class="img-thumbnail rounded-circle" alt="author image"
                     style="width: auto; height: 100px;">
                   <div class="author ml-3">
-                    <h3 class="mb-1" style="color: black; font-weight: 600;">Raj Himchal</h3>
+                    <h3 class="mb-1" style="color: black; font-weight: 600; font-size: 20px;">Raj Himchal</h3>
                     <p class="text-muted m-0">06 November 2024</p>
                   </div>
                 </div>
@@ -269,7 +269,8 @@
     <div class="container-lg">
       <div class="row gx-5 py-5">
         <div class="col-lg-6">
-          <div class="footer-brand mb-2"><img src="img/asset/logoVer.png" alt="" style="width: auto; height: 40px;"></div>
+          <div class="footer-brand mb-2"><img src="img/asset/logoVer.png" alt="" style="width: auto; height: 40px;">
+          </div>
           <!-- Almat -->
           <div class="d-flex align-items-center">
             <i class="fa-solid fa-location-dot" style="font-size: 15px; color: white;"></i>
@@ -297,28 +298,51 @@
             <div class="col-md-4 mb-5 mb-lg-0">
               <div class="text-uppercase-expanded text-lg mb-4" style="color: white; font-weight: bold;">Layanan</div>
               <ul class="list-unstyled text-light" style="font-weight: 600;">
-                <li class="" style="margin-bottom: -10px;"><p>Poli Umum</li>
-                <li class="" style="margin-bottom: -10px;"><p>Poli Anak</li>
-                <li class="" style="margin-bottom: -10px;"><p>Poli Gigi</li>
-                <li class="" style="margin-bottom: -10px;"><p>Poli Bidan</li>
-                <li class="" style="margin-bottom: -10px;"><p>Laboratorium</li>
-                
+                <li class="" style="margin-bottom: -10px;">
+                  <p>Poli Umum
+                </li>
+                <li class="" style="margin-bottom: -10px;">
+                  <p>Poli Anak
+                </li>
+                <li class="" style="margin-bottom: -10px;">
+                  <p>Poli Gigi
+                </li>
+                <li class="" style="margin-bottom: -10px;">
+                  <p>Poli Bidan
+                </li>
+                <li class="" style="margin-bottom: -10px;">
+                  <p>Laboratorium
+                </li>
+
               </ul>
             </div>
             <div class="col-md-4 mb-5 mb-md-0">
               <div class="text-uppercase-expanded text-lg mb-4" style="color: white; font-weight: bold;">Dukungan</div>
               <ul class="list-unstyled text-light" style="font-weight: 600;">
-                <li class="" style="margin-bottom: -10px;"><p>Pusat Bantuan</li>
-                <li class="" style="margin-bottom: -10px;"><p>FAQ</li>
-                <li class="" style="margin-bottom: -10px;"><p>Kontak Kami</li>
+                <li class="" style="margin-bottom: -10px;">
+                  <p>Pusat Bantuan
+                </li>
+                <li class="" style="margin-bottom: -10px;">
+                  <p>FAQ
+                </li>
+                <li class="" style="margin-bottom: -10px;">
+                  <p>Kontak Kami
+                </li>
               </ul>
             </div>
             <div class="col-md-4">
-              <div class="text-uppercase-expanded text-lg mb-4" style="color: white; font-weight: bold;">Tentang Kami</div>
+              <div class="text-uppercase-expanded text-lg mb-4" style="color: white; font-weight: bold;">Tentang Kami
+              </div>
               <ul class="list-unstyled text-light" style="font-weight: 600;">
-                <li class="" style="margin-bottom: -10px;"><p>Visi Misi</li>
-                <li class="" style="margin-bottom: -10px;"><p>Tim Kami</li>
-                <li class="" style="margin-bottom: -10px;"><p>Bantuan & Artikel</li>
+                <li class="" style="margin-bottom: -10px;">
+                  <p>Visi Misi
+                </li>
+                <li class="" style="margin-bottom: -10px;">
+                  <p>Tim Kami
+                </li>
+                <li class="" style="margin-bottom: -10px;">
+                  <p>Bantuan & Artikel
+                </li>
               </ul>
             </div>
           </div>
@@ -327,14 +351,69 @@
       <hr class="my-5" style="background-color: white;">
       <div class="row gx-5 align-items-center">
         <div class="col-md-6 small" style="color: white;">Copyright © PuskeSmart, 2024 - Hak Cipta Dilindungi.</div>
-        <div class="col-md-6 text-right small" >
-          <a href="#!" style="color: white; text-decoration: none;">Privacy Policy</a> · <a href="#!" style="color: white; text-decoration: none;">Terms &amp; Conditions</a>
+        <div class="col-md-6 text-right small">
+          <a href="#!" style="color: white; text-decoration: none;">Privacy Policy</a> · <a href="#!"
+            style="color: white; text-decoration: none;">Terms &amp; Conditions</a>
         </div>
       </div>
     </div>
   </footer>
-
   <!-- End Section 5 -->
+
+  <!-- Modal -->
+  <!-- Modal 1 -->
+  <div class="modal fade" id="modalSatu" data-backdrop="static" data-keyboard="false" tabindex="-1"
+    aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="staticBackdropLabel" style="color: black; font-weight: 800;">Panduan Layanan Kami</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body" style="color: black;">
+          <p>Temukan kemudahan menggunakan aplikasi kami untuk mengakses layanan kesehatan.</p>
+          <ul>
+            <li>Daftar dengan mudah dan cepat</li>
+            <li>Dokter dan tenaga medis berpengalaman</li>
+            <li>Semua informasi layanan kesehatan dalam satu genggaman</li>
+          </ul>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-danger" data-dismiss="modal" style="color: white; font-weight: 600;">Tutup</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Modal 2 -->
+  <div class="modal fade" id="modalDua" data-backdrop="static" data-keyboard="false" tabindex="-1"
+    aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="staticBackdropLabel" style="color: black; font-weight: 800;">Tentang PuskeSmart</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body" style="color: black;">
+          <p>Puskesmas Kebun Handil berkomitmen untuk memberikan pelayanan kesehatan berkualitas bagi masyarakat dengan tenaga medis yang profesional. Informasi layanan lengkap, tenaga medis berpengalaman, dan fasilitas modern.<br> <br></p>
+          <p>Hubungi Kami :</p>
+          <ul class="list-unstyled">
+            <li>Alamat: Jl. Yunus Sanis No.9, Handil Jaya, Kec. Jelutung, Kota Jambi, Jambi, 36125 <br></li>
+            <li>Telepon: (021) 123-4567 <br></li>
+            <li>Email: info@puskesmaskebunhandil.co.id<br></li>
+          </ul>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-danger" data-dismiss="modal" style="color: white; font-weight: 600;">Tutup</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- End Modal -->
 
   <!-- My JS -->
   <script src="js/myJS/index.js"></script>
