--- a/home.html
+++ b/home.html
@@ -51,15 +51,15 @@
       <!-- Navbar links centered with mx-auto -->
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav mx-auto">
-          <a class="nav-tengah linknya" href="/login.html">Beranda</a>
-          <a class="nav-tengah linknya" href="/login.html">Pendaftaran</a>
-          <a class="nav-tengah linknya" href="/login.html">Informasi</a>
-          <a class="nav-tengah linknya" href="/login.html">Ulasan</a>
+          <a class="nav-tengah linknya" href="#">Beranda</a>
+          <a class="nav-tengah linknya" href="#">Pendaftaran</a>
+          <a class="nav-tengah linknya" href="#">Informasi</a>
+          <a class="nav-tengah linknya" href="#">Ulasan</a>
         </div>
 
         <!-- Masuk button aligned to the right -->
-        <a class="tombol nav-link btn btn-success font-weight-bold shadow" href="/login.html"
-          style="color: aliceblue; font-size: 1.2rem;">Masuk</a>
+        <a class="tombol nav-link btn btn-primary font-weight-bold shadow" href="#"
+          style="color: aliceblue; font-size: 1.2rem;">Akun</a>
       </div>
     </div>
   </nav>
