--- a/login.html
+++ b/login.html
@@ -71,7 +71,7 @@
 
                         <!-- Forgot password link -->
                         <div class="text-right mb-3">
-                            <a href="#" class="font-weight-bold text-primary" style="font-size: 1rem;">Lupa Sandi?</a>
+                            <a href="/forgot-password.html" class="font-weight-bold text-primary" style="font-size: 1rem;">Lupa Sandi?</a>
                         </div>
 
                         <!-- Login button -->
@@ -82,7 +82,7 @@
 
                         <!-- Register link -->
                         <p class="text-center font-weight-bold text-dark" style="font-size: 1rem;">
-                            Tidak punya akun? <a href="register.html" class="font-weight-bold text-primary ml-1">Daftar</a>
+                            Tidak punya akun? <a href="/register.html" class="font-weight-bold text-primary ml-1">Daftar</a>
                         </p>
                     </form>
                 </div>
